// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageTitle /> Should render correctly 1`] = `
<div>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section page-title__section"
      id="test"
    >
      Test
    </h1>
    some text
  </div>
</div>
`;

exports[`<PageTitle /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="typography__main test-custom-classname"
  >
    <h1
      class="typography__text typography__text--section page-title__section"
      id="test"
    >
      Test
    </h1>
    some text
  </div>
</div>
`;

exports[`<PageTitle /> Should render correctly with other props 1`] = `
<div>
  <a
    class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
    href="/test"
  >
    ⇠ test
  </a>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section page-title__section page-title__section--with-link"
      id="test"
    >
      Test
    </h1>
    some text
  </div>
</div>
`;
